donor dashboard and some other changes

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -136,7 +136,7 @@
           </div>
       
           <!-- Edit Profile Button -->
-          <a href="/profile/<%= currUser._id %>/edit" class="edit-btn">Edit Profile <i class="fa-solid fa-pencil"></i></a>
+          <a href="/<%= currUser.role %>" class="edit-btn">Home page<i class="fa-solid fa-pencil"></i></a>
         </div>
       </div>
 </body>
