--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -911,8 +911,8 @@ text-shadow: 1px 1px 2px #8f1d1daf;
                 <span class="logo-text">ReServe</span>
             </div>
             <nav class="main-nav">
-                <a href="#">Our Impact</a>
-                <a href="#">How We Work</a>
+                <a href="/impact">Our Impact</a>
+                <a href="/approach">How We Work</a>
                 <a href="/receiver/signup">Join as Receiver</a>
                 <a href="/donor/signup">Join as Donor</a>
                 <form action="/login">
