--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -32,7 +32,7 @@
         justify-content: center;
         position: relative;
         overflow: hidden;
-        background-image: url("dab8746ebb0d48e0413f5d97a8dd712c.jpg");
+        background-image: url("/assets/donor_signup.png");
         background-size: cover;
         opacity: 0.8;
       }
@@ -358,8 +358,9 @@
   </head>
   <body>
     <div class="main-container">
-      <!-- Left Image Section (60%) -->
+      
       <div class="image-section">
+        
         <!-- <div class="image-content">
                 <p>Join our community and make a difference. Connect with restaurants and NGOs to help reduce food waste and feed those in need.</p>
             </div> -->
