--- a/express_backend/views/receiver/confirmation.ejs
+++ b/express_backend/views/receiver/confirmation.ejs
@@ -530,7 +530,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="assets/reserve logo1.jpg" alt="ReServes logo" height="60px" style="border-radius: 9999px;">
+      <img src="/assets/reserve logo1.jpg" alt="ReServes logo" height="60px" style="border-radius: 9999px;">
       <div class="logo-text">ReServe</div>
     </div>
     <div class="nav-right">
