--- a/express_backend/views/receiver/dashboard.ejs
+++ b/express_backend/views/receiver/dashboard.ejs
@@ -581,7 +581,7 @@
         <div class="menu-actions">
             <button class="menu-btn profile-btn" onclick="navigateTo('profile')">View Profile</button>
             <form action="/logout" method="POST" style="margin: 0;">
-                <button type="submit" class="menu-btn logout-btn" style="width: 100%;">Logout</button>
+               <a href="/logout" style="text-decoration: none;color: red;"><button type="submit" class="menu-btn logout-btn" style="width: 100%;">Logout</button></a> 
             </form>
         </div>
     </div>
