minor bugs fixed

--- a/express_backend/views/receiver/confirmation.ejs
+++ b/express_backend/views/receiver/confirmation.ejs
@@ -667,7 +667,7 @@
               <i class="fas fa-check-circle"></i>
               Confirm Order
             </button>
-            <a href="/receiver/dashboard" class="btn-confirm btn-reject">
+            <a href="/receiver" class="btn-confirm btn-reject">
               <i class="fas fa-times-circle"></i>
               Decline
             </a>
@@ -742,7 +742,7 @@
       }
 
       alert('Order Confirmed! The donor will be notified. You will receive pickup details shortly.');
-      window.location.href = '/receiver/dashboard';
+      window.location.href = '/receiver';
     }
 
     document.addEventListener('click', function(event) {
