--- a/express_backend/views/users/impact.ejs
+++ b/express_backend/views/users/impact.ejs
@@ -434,7 +434,7 @@
 
                 <!-- Logo + Tagline -->
                 <div class="footer-box">
-                    <img src="reserve logo1.jpg" alt="Company Logo" class="footer-logo">
+                    <img src="/assets/reserve logo1.jpg" alt="Company Logo" class="footer-logo">
                     <p class="tagline-company"></p>
                 </div>
 
